--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
     
-        <h1>Travel to ....</h1>
+        <h1>How to make the worlds best peanut butter and jelly sandwhich</h1>
         
     </body>
 </html>
