--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <body>
     
         <h1>How to make the worlds best peanut butter and jelly sandwhich</h1>
-       
+       step 1: put 2 pieces of any kind of bread in the toaster
+        step 2:set the toaster on medium heat for 2 minutes
+         step 3:take toast out and put jelly on both sides
+          step 4: get a piece of none toasted bread and put peanut butter on both sides
+           step 5:put he doubled sided peanut butter bread on top of one of the jelly toasts then do the same with the other jelly toast
+            step 6: (The most importan step) cut a bisector diagonally down the sandwhich. Then enjoy!
     </body>
 </html>
