--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Project: Worlds best peanutbutter and jelly sandwhich</title>
     </head>
     <body>
-        <h1>How to make the worlds best peanut butter and jelly sandwhich
+        <h1>How to make the worlds best peanut butter and jelly sandwhich</h1>
        <h2>step 1: put 2 pieces of any kind of bread in the toaster
        <h3> step 2:set the toaster on medium heat for 2 minutes
          <h4>step 3:take toast out and put jelly on both sides
