--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     </head>
     <body>
         <h1>How to make the worlds best peanut butter and jelly sandwhich</h1>
-       <h2>step 1: put 2 pieces of any kind of bread in the toaster
-       <h3> step 2:set the toaster on medium heat for 2 minutes
-         <h4>step 3:take toast out and put jelly on both sides
-          <h5>step 4: get a piece of none toasted bread and put peanut butter on both sides
-          <h6> step 5:put he doubled sided peanut butter bread on top of one of the jelly toasts then do the same with the other jelly toast
-            <h7>step 6: (The most importan step) cut a bisector diagonally down the sandwhich. Then enjoy!
+      <h2>step 1: put 2 pieces of any kind of bread in the toaster </h2> 
+        <h3> step 2:set the toaster on medium heat for 2 minutes </h3>
+        <h4>step 3:take toast out and put jelly on both sides </h4>
+        <h5>step 4: get a piece of none toasted bread and put peanut butter on both sides </h5>
+      <h6> step 5:put he doubled sided peanut butter bread on top of one of the jelly toasts then do the same with the other jelly toast </h6>
+            <h7>step 6: (The most importan step) cut a bisector diagonally down the sandwhich. Then enjoy! </h7>
     </body>
 </html>
