--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
         <h4>step 3:take toast out and put jelly on both sides </h4>
         <h5>step 4: get a piece of none toasted bread and put peanut butter on both sides </h5>
       <h6> step 5:put he doubled sided peanut butter bread on top of one of the jelly toasts then do the same with the other jelly toast </h6>
-            <h7> step 6:cut a bisector diagonally down the sandwhich. Then enjoy! </h7>
+            <h7> cut a bisector diagonally down the sandwhich. Then enjoy! </h7>
     </body>
 </html>
