--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
         <meta charset="utf-8">
         <title>Project: Worlds best peanutbutter and jelly sandwhich</title>
     </head>
+    <style>
+        #silas{color:"red";}
+    </style>
     <body>
-        <h1>How to make the worlds best peanut butter and jelly sandwhich</h1>
+        <h1 id="silas">How to make the worlds best peanut butter and jelly sandwhich</h1>
       <h2>step 1: put 2 pieces of any kind of bread in the toaster </h2> 
         <h3> step 2:set the toaster on medium heat for 2 minutes </h3>
         <h4>step 3:take toast out and put jelly on both sides </h4>
