--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Project: Worlds best peanutbutter and jelly sandwhich</title>
     </head>
     <style>
-        #silas{color:"red";}
+        #silas{color:red;}
     </style>
     <body>
         <h1 id="silas">How to make the worlds best peanut butter and jelly sandwhich</h1>
