--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     </head>
     <style>
         #silas{color:red;}
+        #joe{color:brown;}
     </style>
     <body>
         <h1 id="silas">How to make the worlds best peanut butter and jelly sandwhich</h1>
-      <h2>step 1: put 2 pieces of any kind of bread in the toaster </h2> 
+      <h2 id="joe">step 1: put 2 pieces of any kind of bread in the toaster </h2> 
         <h3> step 2:set the toaster on medium heat for 2 minutes </h3>
         <h4>step 3:take toast out and put jelly on both sides </h4>
         <h5>step 4: get a piece of none toasted bread and put peanut butter on both sides </h5>
