--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <style>
         #silas{color:red;}
         #joe{color:brown;}
+        #ll{color:purple;}
     </style>
     <body>
         <h1 id="silas">How to make the worlds best peanut butter and jelly sandwhich</h1>
       <h2 id="joe">step 1: put 2 pieces of any kind of bread in the toaster </h2> 
-        <h3> step 2:set the toaster on medium heat for 2 minutes </h3>
+        <h3 id="ll"> step 2:set the toaster on medium heat for 2 minutes </h3>
         <h4>step 3:take toast out and put jelly on both sides </h4>
         <h5>step 4: get a piece of none toasted bread and put peanut butter on both sides </h5>
       <h6> step 5:put he doubled sided peanut butter bread on top of one of the jelly toasts then do the same with the other jelly toast </h6>
