--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       <h2 id="joe">step 1: put 2 pieces of any kind of bread in the toaster </h2> 
         <h3 id="ll"> step 2:set the toaster on medium heat for 2 minutes </h3>
         <h4 id="pp">step 3:take toast out and put jelly on both sides </h4>
-        <h5="cc">step 4: get a piece of none toasted bread and put peanut butter on both sides </h5>
-      <h6="kk"> step 5:put he doubled sided peanut butter bread on top of one of the jelly toasts then do the same with the other jelly toast </h6>
+        <h5 id="cc">step 4: get a piece of none toasted bread and put peanut butter on both sides </h5>
+       <h6 id="kk"> step 5:put he doubled sided peanut butter bread on top of one of the jelly toasts then do the same with the other jelly toast </h6>
             <h7> step 6:cut a bisector diagonally down the sandwhich. Then enjoy! </h7>
     </body>
 </html>
