--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
         <h5 id="cc">step 4: get a piece of none toasted bread and put peanut butter on both sides </h5>
        <h6 id="kk"> step 5:put he doubled sided peanut butter bread on top of one of the jelly toasts then do the same with the other jelly toast </h6>
             <h7> step 6:cut a bisector diagonally down the sandwhich. Then enjoy! </h7>
+        <img src="https://cdn.pixabay.com/photo/2017/04/04/17/36/food-2202381_960_720.jpg" width=200>
     </body>
 </html>
