--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
        <h6 id="kk"> step 5:put he doubled sided peanut butter bread on top of one of the jelly toasts then do the same with the other jelly toast </h6>
             <h7> step 6:cut a bisector diagonally down the sandwhich. Then enjoy! </h7>
         <img src="https://cdn.pixabay.com/photo/2017/04/04/17/36/food-2202381_960_720.jpg" width=200>
+        background-color: rgb(255, 99, 190);
     </body>
 </html>
