--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
        <h6 id="kk"> step 5:put he doubled sided peanut butter bread on top of one of the jelly toasts then do the same with the other jelly toast </h6>
             <h7> step 6:cut a bisector diagonally down the sandwhich. Then enjoy! </h7>
         <img src="https://cdn.pixabay.com/photo/2017/04/04/17/36/food-2202381_960_720.jpg" width=200>
-        <img src="https://pixabay.com/en/food-fruit-jam-jar-jelly-1841236/"
+        <img src="https://pixabay.com/en/food-fruit-jam-jar-jelly-1841236/"width=200>
        
     </body>
 </html>
