--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </style>
     <body>
         <h1 id="silas">How to make the worlds best peanut butter and jelly sandwhich</h1>
-        Tired of dry bready peanutbutter and jelly sandwhiches? you came to the right place me friend
+        Tired of dry, bready peanutbutter and jelly sandwhiches? you came to the right place me friend
       <h2 id="joe">step 1: put 2 pieces of any kind of bread in the toaster </h2> 
         <h3 id="ll"> step 2:set the toaster on medium heat for 2 minutes </h3>
         <h4 id="pp">step 3:take toast out and put 2 scoops jelly on both sides </h4>
