--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
             <h7> step 6:cut a bisector diagonally down the sandwhich. Then enjoy! </h7>
         <img src="https://cdn.pixabay.com/photo/2017/04/04/17/36/food-2202381_960_720.jpg" width=200>
         <img src="https://pixabay.com/en/food-fruit-jam-jar-jelly-1841236/" width=200>
-       ggggg
+       maybe you dont like jelly? its all good honey is a great substitute. here is a way to make a great peanut butter and honey sandwhich.
+        step 1= spread honey on two pieces of toast 
+        step 2= spread peanut butter on another piece of bread, (make sure you dont put the honey and peanut butter together because they dont mix that well).
+        step 3= put the honey toast, honey side down on the peanut butter sandwhich.
+        step 4= cut the bread diagonal and your set!
     </body>
 </html>
