--- a/index.html
+++ b/index.html
@@ -20,11 +20,10 @@
         <h4 id="pp">step 3:take toast out and put 2 scoops jelly on both sides </h4>
         <h5 id="cc">step 4: get a piece of none toasted bread and put peanut butter on both sides </h5>
        <h6 id="kk"> step 5:put he doubled sided peanut butter bread on top of one of the jelly toasts then do the same with the other jelly toast </h6>
-            <h7> step 6:cut a bisector diagonally down the sandwhich. Then enjoy! </h7>
         <img src="https://cdn.pixabay.com/photo/2017/04/04/17/36/food-2202381_960_720.jpg" width=200>
         <img src="https://pixabay.com/en/food-fruit-jam-jar-jelly-1841236/" width=200>
        maybe you dont like jelly? its all good honey is a great substitute. here is a way to make a great peanut butter and honey sandwhich.
-        step 1= spread honey on two pieces of toast 
+        <h1>step 1= spread honey on two pieces of toast<h/1>
         step 2= spread peanut butter on another piece of bread, (make sure you dont put the honey and peanut butter together because they dont mix that well).
         step 3= put the honey toast, honey side down on the peanut butter sandwhich.
         step 4= cut the bread diagonal and your set!
