--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
         #pp{color:red;}
         #cc{color:brown;}
         #kk{color:purple;}
-    </style>
+        body{backround-color:light blue;}
+    </style> 
+    
     <body>
         <h1 id="silas">How to make the worlds best peanut butter and jelly sandwhich</h1>
         Tired of dry, bready peanutbutter and jelly sandwhiches? you came to the right place me friend
