--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         #pp{color:red;}
         #cc{color:brown;}
         #kk{color:purple;}
-        body{backround-color:light blue;}
+        body{backround-color:blue;}
     </style> 
     
     <body>
