--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
         #pp{color:red;}
         #cc{color:brown;}
         #kk{color:purple;}
-        body{backround color:blue;}
+        body{
+            backround color:blue;
+        }
     </style> 
     
     <body>
