--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         #cc{color:brown;}
         #kk{color:purple;}
         body{
-            backround color:blue;
+            background-color: blue;
         }
     </style> 
     
