--- a/index.html
+++ b/index.html
@@ -5,15 +5,14 @@
         <title>Project: Worlds best peanutbutter and jelly sandwhich</title>
     </head>
     <style>
+          body {background-color: blue;}
         #silas{color:red;}
         #joe{color:brown;}
         #ll{color:purple;}
         #pp{color:red;}
         #cc{color:brown;}
         #kk{color:purple;}
-        body{
-            background-color: blue;
-        }
+      
     </style> 
     
     <body>
