--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <style>
           body {background-color: blue;}
         #silas{color:red;}
-        #joe{color:brown;}
-        #ll{color:purple;}
+        #joe{color:red;}
+        #ll{color:red;}
         #pp{color:red;}
-        #cc{color:brown;}
-        #kk{color:purple;}
+        #cc{color:red;}
+        #kk{color:red;}
       
     </style> 
     
