--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
         #pp{color:red;}
         #cc{color:red;}
         #kk{color:red;}
-      
+      p:hover {
+    background-color: yellow;
+}
     </style> 
     
     <body>
@@ -30,5 +32,6 @@
         step 2= spread peanut butter on another piece of bread, (make sure you dont put the honey and peanut butter together because they dont mix that well).
         step 3= put the honey toast, honey side down on the peanut butter sandwhich.
         step 4= cut the bread diagonal and your set!
+            <p><b>Note:</b> The :hover selector style links on mouse-over.</p>
     </body>
 </html>
