--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
         <h1>step 1= spread honey on two pieces of toast<h/1>
         step 2= spread peanut butter on another piece of bread, (make sure you dont put the honey and peanut butter together because they dont mix that well).
         step 3= put the honey toast, honey side down on the peanut butter sandwhich.
-        step 4= cut the bread diagonal and your set!
-            <p><b>Note:</b> The :hover selector style links on mouse-over.</p>
+        step 4= cut the bread diagonal and your set
     </body>
 </html>
