--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </style> 
     
     <body>
-        <p><b>Note:</b>
+        <p><b>:</b>
         <h1 id="silas">How to make the worlds best peanut butter and jelly sandwhich</h1>
         Tired of dry, bready peanutbutter and jelly sandwhiches? you came to the right place me friend
       <h2 id="joe">step 1: put 2 pieces of any kind of bread in the toaster </h2> 
@@ -32,6 +32,6 @@
         <h1>step 1= spread honey on two pieces of toast<h/1>
         step 2= spread peanut butter on another piece of bread, (make sure you dont put the honey and peanut butter together because they dont mix that well).
         step 3= put the honey toast, honey side down on the peanut butter sandwhich.
-        step 4= cut the bread diagonal and your set
+        step 4= cut the bread diagonal and your set :</b>
     </body>
 </html>
