--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     
     <body>
         
-       <p><b>:</b><h1 id="silas">How to make the worlds best peanut butter and jelly sandwhich</h1>
+       <p><b><h1 id="silas">How to make the worlds best peanut butter and jelly sandwhich</h1>
         Tired of dry, bready peanutbutter and jelly sandwhiches? you came to the right place me friend
       <h2 id="joe">step 1: put 2 pieces of any kind of bread in the toaster </h2> 
         <h3 id="ll"> step 2:set the toaster on medium heat for 2 minutes </h3>
