--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
     
     <body>
         
-       <p><b><h1 id="silas">How to make the worlds best peanut butter and jelly sandwhich</h1>
+       <p><b></b><h1 id="silas">How to make the worlds best peanut butter and jelly sandwhich</h1>
         Tired of dry, bready peanutbutter and jelly sandwhiches? you came to the right place me friend
       <h2 id="joe">step 1: put 2 pieces of any kind of bread in the toaster </h2> 
         <h3 id="ll"> step 2:set the toaster on medium heat for 2 minutes </h3>
         <h4 id="pp">step 3:take toast out and put 2 scoops jelly on both sides </h4>
         <h5 id="cc">step 4: get a piece of none toasted bread and put peanut butter on both sides </h5>
-       <h6 id="kk"> step 5:put he doubled sided peanut butter bread on top of one of the jelly toasts then do the same with the other jelly toast </h6></b>
+       <h6 id="kk"> step 5:put he doubled sided peanut butter bread on top of one of the jelly toasts then do the same with the other jelly toast </h6>
         <img src="https://cdn.pixabay.com/photo/2017/04/04/17/36/food-2202381_960_720.jpg" width=200>
         <img src="https://pixabay.com/en/food-fruit-jam-jar-jelly-1841236/" width=200>
        maybe you dont like jelly? its all good honey is a great substitute. here is a way to make a great peanut butter and honey sandwhich.
         <h1>step 1= spread honey on two pieces of toast<h/1>
         step 2= spread peanut butter on another piece of bread, (make sure you dont put the honey and peanut butter together because they dont mix that well).
         step 3= put the honey toast, honey side down on the peanut butter sandwhich.
-        step 4= cut the bread diagonal and your set
+            step 4= cut the bread diagonal and your set</p>
     </body>
 </html>
