--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 }
     </style> 
     
-    <body> <p><b>sandwhich:</b> 
+    <body> <p><b>This website will teach you how to make a great peanutbutter and jelly sandwhich:</b> 
        <h1 id="silas">How to make the worlds best peanut butter and jelly sandwhich</h1>
         Tired of dry, bready peanutbutter and jelly sandwhiches? you came to the right place me friend
       <h2 id="joe">step 1: put 2 pieces of any kind of bread in the toaster </h2> 
